--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -163,7 +163,7 @@
     /* グリッドレイアウトへ変更 */
     .item-list {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+        grid-template-columns: repeat(4, 1fr);
         gap: 40px;
         margin-top: 50px;
         padding-left: 50px;
@@ -257,7 +257,7 @@
     }
 
     .item-list {
-        grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+        grid-template-columns: repeat(4, 1fr);
         gap: 50px;
         margin-top: 60px;
         padding-left: 60px;
